[gd_scene load_steps=15 format=2]

[ext_resource path="res://Images/Enemies/Enemy_3_lights.png" type="Texture" id=1]
[ext_resource path="res://Images/Enemies/Enemy_3.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Enemies/Enemy_3.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Enemies/EnemyHitSound.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Enemies/EnemyDeathSound.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 47.6927
height = 81.0974

[sub_resource type="Animation" id=2]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Arm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -25, 30 ), Vector2( -49, 18 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -20.0, 10.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ), Vector2( -8, 2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Head:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -16.0, -16.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Arm2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -8, 40 ), Vector2( -32, 28 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Arm2:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -20.0, 10.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "charging"
tracks/0/type = "value"
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ), Vector2( 8, 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -16.0, -16.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Arm2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -8, 40 ), Vector2( 1.90735e-06, 32 ), Vector2( -8, 40 ), Vector2( 1.90735e-06, 32 ), Vector2( -8, 40 ), Vector2( 1.90735e-06, 32 ), Vector2( -8, 40 ), Vector2( 1.90735e-06, 32 ), Vector2( -8, 40 ), Vector2( 1.90735e-06, 32 ), Vector2( -8, 40 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Arm2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -20.0, -20.0, -20.0, -20.0, -20.0, -20.0, -20.0, -20.0, -20.0, -20.0, -20.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Arm:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -25, 30 ), Vector2( -17, 22 ), Vector2( -25, 30 ), Vector2( -17, 22 ), Vector2( -25, 30 ), Vector2( -17, 22 ), Vector2( -25, 30 ), Vector2( -17, 22 ), Vector2( -25, 30 ), Vector2( -17, 22 ), Vector2( -25, 30 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Arm:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -20.0, -20.0, -20.0, -20.0, -20.0, -20.0, -20.0, -20.0, -20.0, -20.0, -20.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "hit"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 4 ), Vector2( 6, 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Head:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 16.0, 20.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Arm2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 9, 62 ), Vector2( 15, 64 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Arm2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -50.0, -60.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Arm:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -9, 46 ), Vector2( -17, 46 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Arm:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -50.0, -40.0 ]
}

[sub_resource type="Animation" id=5]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Arm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -17, 30 ), Vector2( -17, 22 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -10.0, -10.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Head:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Arm2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 42 ), Vector2( -1.19209e-07, 34 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Arm2:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -10.0, -10.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Arm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -17, 30 ), Vector2( -17, 22 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -15.0, -15.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -4, 2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Head:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -10.0, -10.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Arm2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 42 ), Vector2( -1.19209e-07, 34 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Arm2:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -15.0, -15.0 ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 44.6219

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 160, 60 )

[sub_resource type="CircleShape2D" id=9]
radius = 45.232

[node name="Enemy_3" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 34
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -40, 9 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimatedSkeleton" type="Node2D" parent="."]

[node name="Arm" type="Sprite" parent="AnimatedSkeleton"]
self_modulate = Color( 1.4, 1.3, 1.4, 1 )
position = Vector2( -17, 27.0077 )
rotation = -0.261799
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 24, 72, 70, 24 )

[node name="Arm2" type="Sprite" parent="AnimatedSkeleton/Arm"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 24, 72, 70, 24 )

[node name="Head" type="Sprite" parent="AnimatedSkeleton"]
self_modulate = Color( 1.5, 1.4, 1.5, 1 )
position = Vector2( -1.49617, 0.748084 )
rotation = -0.174533
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 48, 78 )

[node name="Head2" type="Sprite" parent="AnimatedSkeleton/Head"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 48, 78 )

[node name="Arm2" type="Sprite" parent="AnimatedSkeleton"]
self_modulate = Color( 1.5, 1.4, 1.5, 1 )
position = Vector2( -4.45892e-08, 39.0077 )
rotation = -0.261799
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 24, 72, 70, 24 )

[node name="Arm2" type="Sprite" parent="AnimatedSkeleton/Arm2"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 24, 72, 70, 24 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSkeleton"]
anims/attack = SubResource( 2 )
anims/charging = SubResource( 3 )
anims/hit = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/move = SubResource( 6 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 832

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
modulate = Color( 0, 1, 0, 0.345098 )
position = Vector2( -4.1232, 7.85381 )
shape = SubResource( 7 )

[node name="DetectionArea" type="Area2D" parent="."]
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
visible = false
modulate = Color( 0, 0, 0, 0.509804 )
z_index = -1
shape = SubResource( 8 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
modulate = Color( 1, 0, 0, 0.537255 )
position = Vector2( -6.76624, 9.63362 )
shape = SubResource( 9 )
disabled = true

[node name="HitTween" type="Tween" parent="."]

[node name="HitSound" parent="." instance=ExtResource( 4 )]

[node name="DeathSound" parent="." instance=ExtResource( 5 )]

[connection signal="animation_finished" from="AnimatedSkeleton/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="tween_all_completed" from="HitTween" to="." method="_on_HitTween_tween_all_completed"]
